Fixed z-index of quote box arrow

--- a/views/showbot.scss
+++ b/views/showbot.scss
@@ -163,6 +163,7 @@ hr {
       position: relative;
       bottom: -8px;
       right: -190px;
+      z-index: -1;
     }
 
     .user {
